Add Scan & Download Button
